--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -768,3 +768,9 @@ a {
 #mega-menu-pull-down button {
   font-family: "Open Sans", sans-serif;
 }
+
+@media only screen and (max-width: 768px) {
+  #content-banner #education-studies-h1 {
+    width: 80%;
+  }
+}
